--- a/maquetacion_basica/blog.css
+++ b/maquetacion_basica/blog.css
@@ -29,29 +29,43 @@ justify-content: space-around;
 
 .title{
     display: flex;
-    justify-content: center;
-    font-size:400%;
-    margin: 10px 100px 100px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    font-size:400% ;
 }
+
+.container{
+    display: flex;
+}
+
+.im{
+    width: 1350px;
+    height: 900px;
+    margin: 50px;
+}
+
+
 .inf{
     display: flex;
     flex-direction: column;
+    margin: 50px;
+    height: 800px;
+    width: 1200px;
     justify-content: center;
-
-    margin: 10px 100px 100px 10px;
-    font-size: 150%;
+    
     
 }
 
 
 
-.imagen10{
-    display: flex;
-    width: 55%;
-    height: 70%;
-} 
+
+
 
 .text{
-    padding: 20px;
+   height: 100px;
+   font-size: 120%;
+   margin: 5px;
+   text-align: center;
     
     }
